# OpenSynch-6

./: CMakeLists.txt  main.cpp
Module-MAC/agent/: CMakeLists.txt
Module-MAC/agent/include/: agent.h  collective.h  mathagent.h
Module-MAC/agent/src/: agent.cpp  collective.cpp  mathagent.cpp
Module-MAC/mas/include/: integratormodel.h  linearmodel.h  masmodel.h
Module-MAC/mas/src/: integratormodel.cpp  linearmodel.cpp  masmodel.cpp
Module-MAC/network/include/: dynamicnetwork.h
Module-MAC/network/src/: dynamicnetwork.cpp
Module-MAC/protocol/: CMakeLists.txt
Module-MAC/protocol/include/: connection.h  nonadditiveprotocol.h  protocol.h  simpleprotocol.h  targetprotocol.h
Module-MAC/protocol/src/: nonadditiveprotocol.cpp  simpleprotocol.cpp  targetprotocol.cpp
Module-Math/fdm/: CMakeLists.txt
Module-Math/fdm/include/: eulerscheme.h  finitedifferencemethod.h  model.h
Module-Math/fdm/src/: eulerscheme.cpp  finitedifferencemethod.cpp  model.cpp
Module-Math/graph/include/: circlegraph.h  graphgenerator.h  linegraph.h  wattsstrogatzgraph.h
Module-Math/selector/: CMakeLists.txt
Module-Math/selector/include/: selector.h
Module-Math/time/src/: timecounter.cpp
OpenKuramoto/edge/: CMakeLists.txt
OpenKuramoto/edge/include/: edge.h  staticedge.h
OpenKuramoto/edge/src/: edge.cpp  staticedge.cpp
OpenKuramoto/fdm/: CMakeLists.txt
OpenKuramoto/fdm/include/: eulerscheme.h  finitedifferencemethod.h
OpenKuramoto/fdm/src/: eulerscheme.cpp  finitedifferencemethod.cpp
OpenKuramoto/model/: CMakeLists.txt
OpenKuramoto/model/include/: kuromotomodel.h  synchronizationmodel.h
OpenKuramoto/model/src/: kuromotomodel.cpp  synchronizationmodel.cpp
OpenKuramoto/object/: CMakeLists.txt
OpenKuramoto/object/include/: dynamicedge.h  edge.h  materialpoint.h  materialpointsystem.h  oscillator.h  oscillatorsystem.h  staticedge.h
OpenKuramoto/object/src/: dynamicedge.cpp  edge.cpp  materialpoint.cpp  materialpointsystem.cpp  oscillator.cpp  oscillatorsystem.cpp  staticedge.cpp
OpenKuramoto/selector/: CMakeLists.txt
OpenKuramoto/selector/include/: intervalselector.h
OpenKuramoto/selector/src/: intervalselector.cpp  selector.cpp
OpenKuramoto/time/: CMakeLists.txt
OpenKuramoto/time/include/: timecounter.h
OpenKuramoto/time/src/: timecounter.cpp
OpenPH/math/mathlist/: CMakeLists.txt
OpenPH/math/mathlist/include/: mathlist.h
OpenPH/math/mathlist/src/: mathlist.cpp
